Изменения в блоке kaufman

--- a/index.html
+++ b/index.html
@@ -134,10 +134,94 @@
         <img class="feynman__main-illustration"
           src="C:\Users\Antonkatuwka\Desktop\Яндекс.Практикум\практика\second-project\how-to-learn\images\feynman.png"
           alt="Фейнман">
-          <h3 class="feynman__link">Подробнее--></h3>
-        </section>
+        <h3 class="feynman__link">Подробнее--></h3>
+      </section>
 
       <section class="kaufman">
+        <h2 class="kaufman-title_dark">Принципы обучения</h2>
+        <h3 class="kaufman-subtitle_dark">от Джоша Кауфмана</h3>
+        <img class="kaufman__main-illustration_dark"
+          src="C:\Users\Antonkatuwka\Desktop\Яндекс.Практикум\практика\second-project\how-to-learn\images\kaufman-triangle.svg"
+          alt="треугольник">
+        <ul class="table_dark">
+          <li class="table__cell_theme_dark">
+            <div>
+              <h3 class="table__heading_dark">1</h3>
+              <p class="table__cell_text_dark">Выберите привлекательный проект.</p>
+            </div>
+
+          </li>
+          <li class="table__cell_theme_dark">
+            <div>
+              <h3 class="table__heading_dark">2</h3>
+              <p class="table__cell_text_dark">Сосредоточьтесь на каком-то одном навыке.</p>
+            </div>
+
+          </li>
+          <li class="table__cell_theme_dark">
+            <div>
+              <h3 class="table__heading_dark">3</h3>
+              <p class="table__cell_text_dark">Определите целевой уровень мастерства.</p>
+            </div>
+
+          </li>
+          <li class="table__cell_theme_dark">
+            <div>
+              <h3 class="table__heading_dark">4</h3>
+              <p class="table__cell_text_dark">Разбейте навык на элементы.</p>
+            </div>
+
+          </li>
+          <li class="table__cell_theme_dark">
+            <div>
+              <h3 class="table__heading_dark">5</h3>
+              <p class="table__cell_text_dark">Приготовьте всё необходимое для занятий.</p>
+            </div>
+
+          </li>
+          <li class="table__cell_theme_dark">
+            <div>
+              <h3 class="table__heading_dark">6</h3>
+              <p class="table__cell_text_dark">Устраните препятствия для занятий.</p>
+            </div>
+
+          </li>
+          <li class="table__cell_theme_dark">
+            <div>
+              <h3 class="table__heading_dark">7</h3>
+              <p class="table__cell_text_dark">Выделите специальное время для занятий.</p>
+            </div>
+
+          </li>
+          <li class="table__cell_theme_dark">
+            <div>
+              <h3 class="table__heading_dark">8</h3>
+              <p class="table__cell_text_dark">Создайте быстрые петли обратной связи.</p>
+            </div>
+
+          </li>
+
+        </li>
+        <li class="table__cell_theme_dark">
+          <div>
+            <h3 class="table__heading_dark">9</h3>
+            <p class="table__cell_text_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+          </div>
+
+        </li>
+        <li class="table__cell_theme_dark">
+          <div>
+            <h3 class="table__heading_dark">10</h3>
+            <p class="table__cell_text_dark">Уделяйте внимание количеству и скорости.</p>
+          </div>
+
+        </li>
+
+          <div>
+
+          </div>
+
+        </ul>
       </section>
     </main>
     <footer class="footer">
