исправление ошибок вёрстки

--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@
         <div class="description__two-columns">
           <div class="description__brief">
             <h2>Главные проблемы в обучении</h2>
-          </div>
-          <div class="description__main-text description_main-text_paragraph">
+          </div >
+          <div class="description__main-text">
             <!-- <div class="two-columns"> -->
-            <p>Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и
+            <p class="description_main-text_paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и
               учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не
               даёт нам реального знания. Зубрёжка быстро выветривается и не приносит пользы. </p>
-          </div>
-          <div class="description__main-text description_main-text_paragraph">
-            <p class="">Вывод: ></p>
-            <p class="description__main-text description_main-text_paragraph">учиться тоже нужно уметь, но почему-то
+         <!-- </div>
+          <div class="description__main-text description_main-text_paragraph">-->
+            <p class="description_main-text_paragraph">Вывод: ></p>
+            <p class="description_main-text_paragraph">учиться тоже нужно уметь, но почему-то
               этому мало где учат. Что с этим делать?</p>
-          </div>
-          <div class="description__main-text">
+          <!--</div>
+          <div class="description__main-text">-->
             <p>Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и
               захватывающим. Эти же техники применяются на примере обучения в Практикуме. </p>
           </div>
@@ -201,21 +201,21 @@
 
           </li>
 
-        </li>
-        <li class="table__cell_theme_dark">
-          <div>
-            <h3 class="table__heading_dark">9</h3>
-            <p class="table__cell_text_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
-          </div>
+          </li>
+          <li class="table__cell_theme_dark">
+            <div>
+              <h3 class="table__heading_dark">9</h3>
+              <p class="table__cell_text_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+            </div>
 
-        </li>
-        <li class="table__cell_theme_dark">
-          <div>
-            <h3 class="table__heading_dark">10</h3>
-            <p class="table__cell_text_dark">Уделяйте внимание количеству и скорости.</p>
-          </div>
+          </li>
+          <li class="table__cell_theme_dark">
+            <div>
+              <h3 class="table__heading_dark">10</h3>
+              <p class="table__cell_text_dark">Уделяйте внимание количеству и скорости.</p>
+            </div>
 
-        </li>
+          </li>
 
           <div>
 
@@ -225,7 +225,50 @@
       </section>
     </main>
     <footer class="footer">
+      <div class="footer__columns">
+        <div class="footer__columns_content_copyright">
+          <img class="logo_place_footer"
+            src="C:\Users\Antonkatuwka\Desktop\Яндекс.Практикум\практика\second-project\how-to-learn\images\logo_place_footer.svg"
+            alt="Логотип">
+          <p class="footer__autor">&copy 2021. Преснякова Екатерина </p>
 
+        </div>
+        <div class="footer__columns_content_info">
+          <h3 class="footer__column-heading">О Практикуме</h3>
+          <div class="footer__column-link">
+            <a href="" class="footer__column-links">Главная</a>
+            <a href="" class="footer__column-links">Концепция</a>
+            <a href="" class="footer__column-links">Наставники</a>
+          </div>
+          <div class="footer__columns_content_social">
+            <h3 class="footer__column-heading">Соцсети</h3>
+            <div class="footer__columns_content_social">
+              <div class="footer__column-link">
+                <img class="footer__social-icon"
+                  src="C:\Users\Antonkatuwka\Desktop\Яндекс.Практикум\практика\second-project\how-to-learn\images\facebook_color_white.svg"
+                  alt="Facebook">
+                <a href="" class="footer__column-links">Facebook</a>
+
+              </div>
+              <div class="footer__column-link">
+                <img class="footer__social-icon"
+                  src="C:\Users\Antonkatuwka\Desktop\Яндекс.Практикум\практика\second-project\how-to-learn\images\vk_color_white.svg"
+                  alt="ВКонтакте">
+                <a href="" class="footer__column-links">ВКонтакте</a>
+
+              </div>
+              <div class="footer__column-link">
+                <img class="footer__social-icon"
+                  src="C:\Users\Antonkatuwka\Desktop\Яндекс.Практикум\практика\second-project\how-to-learn\images\instagram_color_white.svg"
+                  alt="Instagram">
+                <a href="" class="footer__column-links">Instagram</a>
+
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </div>
     </footer>
   </div>
 </body>
