--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <h1 class="header__title">Научиться учиться</h1>
       <!-- Подзаголовок -->
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей
-        жизни? <a href="">Узнать-></a></p>
+        жизни? <a href="header__subtitle_link">Узнать &#8594</a></p>
       <!-- Основная картинка -->
       <img class="header__main-illustration"
         src="C:/Users/Antonkatuwka/Desktop/%D0%AF%D0%BD%D0%B4%D0%B5%D0%BA%D1%81.%D0%9F%D1%80%D0%B0%D0%BA%D1%82%D0%B8%D0%BA%D1%83%D0%BC/%D0%BF%D1%80%D0%B0%D0%BA%D1%82%D0%B8%D0%BA%D0%B0/second-project/how-to-learn/images/header-image.png"
@@ -31,20 +31,20 @@
     <main class="content">
       <section class="description">
         <div class="description__two-columns">
-          <div class="description__brief">
-            <h2>Главные проблемы в обучении</h2>
-          </div >
-          <div class="description__main-text">
+          <!--<div >-->
+          <h2 class="description__two-columns_brief">Главные проблемы в обучении</h2>
+          <!-- </div>-->
+          <div class="description__two-columns_main-text">
             <!-- <div class="two-columns"> -->
-            <p class="description_main-text_paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и
+            <p class="description_main-text_paragraph">Ни в школе, ни в институте нас не учат тому, как правильно
+              изучать материал. Мы готовимся к экзаменам и
               учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не
               даёт нам реального знания. Зубрёжка быстро выветривается и не приносит пользы. </p>
-         <!-- </div>
+            <!-- </div>
           <div class="description__main-text description_main-text_paragraph">-->
-            <p class="description_main-text_paragraph">Вывод: ></p>
-            <p class="description_main-text_paragraph">учиться тоже нужно уметь, но почему-то
-              этому мало где учат. Что с этим делать?</p>
-          <!--</div>
+            <p class="description_main-text_paragraph"><span class="description__two-columns_span-accent">Вывод:</span>
+              учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
+            <!--</div>
           <div class="description__main-text">-->
             <p>Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и
               захватывающим. Эти же техники применяются на примере обучения в Практикуме. </p>
@@ -55,32 +55,31 @@
       <section class="digits">
         <h2 class="digits-title">Цифры и факты</h2>
         <h3 class="digits-subtitle">Про учёбу и мозг</h3>
-        <ul class="table">
+        <ul class="table table_light">
           <li class="table__cell_theme_light">
             <div>
-              <h3 class="table__heading">86 миллиардов</h3>
+              <h3 class="table__heading_light">86 миллиардов</h3>
               <p class="table__cell_text_light">Число нейронов в мозге человека</p>
             </div>
 
           </li>
           <li class="table__cell_theme_light">
             <div>
-              <h3 class="table__heading">2.1 миллиарда</h3>
-              <p class="table__cell_text_light">Число нуждающихся в повышении квалификации
-                Всемирный Банк, 2017</p>
+              <h3 class="table__heading_light">2.1 миллиарда</h3>
+              <p class="table__cell_text_light">Число нуждающихся в повышении квалификации<br>Всемирный Банк, 2017</br></p>
             </div>
 
           </li>
           <li class="table__cell_theme_light">
             <div>
-              <h3 class="table__heading">1000 терабайт</h3>
+              <h3 class="table__heading_light">1000 терабайт</h3>
               <p class="table__cell_text_light">Объём памяти человека</p>
             </div>
 
           </li>
           <li class="table__cell_theme_light">
             <div>
-              <h3 class="table__heading">500 триллионов</h3>
+              <h3 class="table__heading_light">500 триллионов</h3>
               <p class="table__cell_text_light">Число ответственных за обучение нервных синапсов у взрослого человека
               </p>
             </div>
@@ -88,30 +87,29 @@
           </li>
           <li class="table__cell_theme_light">
             <div>
-              <h3 class="table__heading">420 миллионов</h3>
-              <p class="table__cell_text_light">Число взрослых людей моложе 25 лет, не имеющих образования для
-                трудоустройства
-                Всемирный Банк, 2017</p>
+              <h3 class="table__heading_light">420 миллионов</h3>
+              <p class="table__cell_text_light">Число взрослых людей моложе 25 лет,не имеющих образования для
+                трудоустройства.<br></br><br>Всемирный Банк, 2017</br></p>
             </div>
 
           </li>
           <li class="table__cell_theme_light">
             <div>
-              <h3 class="table__heading">17–20 лет</h3>
+              <h3 class="table__heading_light">17–20 лет</h3>
               <p class="table__cell_text_light">Пик обучаемости</p>
             </div>
 
           </li>
           <li class="table__cell_theme_light">
             <div>
-              <h3 class="table__heading">1885 год</h3>
+              <h3 class="table__heading_light">1885 год</h3>
               <p class="table__cell_text_light">Открытие кривой забывания</p>
             </div>
 
           </li>
           <li class="table__cell_theme_light">
             <div>
-              <h3 class="table__heading">1889 год</h3>
+              <h3 class="table__heading_light">1889 год</h3>
               <p class="table__cell_text_light">Открытие условного рефлекса</p>
             </div>
 
@@ -134,7 +132,7 @@
         <img class="feynman__main-illustration"
           src="C:\Users\Antonkatuwka\Desktop\Яндекс.Практикум\практика\second-project\how-to-learn\images\feynman.png"
           alt="Фейнман">
-        <h3 class="feynman__link">Подробнее--></h3>
+        <h3 class="feynman__link">Подробнее &#8594</h3>
       </section>
 
       <section class="kaufman">
@@ -143,7 +141,7 @@
         <img class="kaufman__main-illustration_dark"
           src="C:\Users\Antonkatuwka\Desktop\Яндекс.Практикум\практика\second-project\how-to-learn\images\kaufman-triangle.svg"
           alt="треугольник">
-        <ul class="table_dark">
+        <ul class="table table_dark">
           <li class="table__cell_theme_dark">
             <div>
               <h3 class="table__heading_dark">1</h3>
@@ -243,13 +241,13 @@
           <div class="footer__columns_content_social">
             <h3 class="footer__column-heading">Соцсети</h3>
             <div class="footer__columns_content_social">
-              <div class="footer__column-link">
+              <!--<div class="footer__column-link">-->
                 <img class="footer__social-icon"
                   src="C:\Users\Antonkatuwka\Desktop\Яндекс.Практикум\практика\second-project\how-to-learn\images\facebook_color_white.svg"
                   alt="Facebook">
                 <a href="" class="footer__column-links">Facebook</a>
 
-              </div>
+              <!--/div-->
               <div class="footer__column-link">
                 <img class="footer__social-icon"
                   src="C:\Users\Antonkatuwka\Desktop\Яндекс.Практикум\практика\second-project\how-to-learn\images\vk_color_white.svg"
