--- a/index.html
+++ b/index.html
@@ -12,40 +12,32 @@
 <body>
   <div class="page">
     <header class="header">
-      <!-- Логотип -->
+      <!--Header-->
       <img
         src="C:/Users/Antonkatuwka/Desktop/%D0%AF%D0%BD%D0%B4%D0%B5%D0%BA%D1%81.%D0%9F%D1%80%D0%B0%D0%BA%D1%82%D0%B8%D0%BA%D1%83%D0%BC/%D0%BF%D1%80%D0%B0%D0%BA%D1%82%D0%B8%D0%BA%D0%B0/second-project/how-to-learn/images/logo_place_header.svg"
         alt="Logo" class="logo_place_header">
-      <!-- Надпись -->
       <h1 class="header__title">Научиться учиться</h1>
-      <!-- Подзаголовок -->
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей
         жизни? <a href="header__subtitle_link">Узнать &#8594</a></p>
-      <!-- Основная картинка -->
       <img class="header__main-illustration"
         src="C:/Users/Antonkatuwka/Desktop/%D0%AF%D0%BD%D0%B4%D0%B5%D0%BA%D1%81.%D0%9F%D1%80%D0%B0%D0%BA%D1%82%D0%B8%D0%BA%D1%83%D0%BC/%D0%BF%D1%80%D0%B0%D0%BA%D1%82%D0%B8%D0%BA%D0%B0/second-project/how-to-learn/images/header-image.png"
         alt="Опять двойка">
-      <!-- Синий квадрат -->
       <div class="header__square-pic"></div>
     </header>
+
+
     <main class="content">
+      <!-- 2 колонки -->
       <section class="description">
         <div class="description__two-columns">
-          <!--<div >-->
           <h2 class="description__two-columns_brief">Главные проблемы в обучении</h2>
-          <!-- </div>-->
           <div class="description__two-columns_main-text">
-            <!-- <div class="two-columns"> -->
             <p class="description_main-text_paragraph">Ни в школе, ни в институте нас не учат тому, как правильно
               изучать материал. Мы готовимся к экзаменам и
               учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не
               даёт нам реального знания. Зубрёжка быстро выветривается и не приносит пользы. </p>
-            <!-- </div>
-          <div class="description__main-text description_main-text_paragraph">-->
             <p class="description_main-text_paragraph"><span class="description__two-columns_span-accent">Вывод:</span>
               учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
-            <!--</div>
-          <div class="description__main-text">-->
             <p>Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и
               захватывающим. Эти же техники применяются на примере обучения в Практикуме. </p>
           </div>
@@ -53,6 +45,7 @@
       </section>
 
       <section class="digits">
+        <!-- светлая таблица -->
         <h2 class="digits-title">Цифры и факты</h2>
         <h3 class="digits-subtitle">Про учёбу и мозг</h3>
         <ul class="table table_light">
@@ -61,21 +54,19 @@
               <h3 class="table__heading_light">86 миллиардов</h3>
               <p class="table__cell_text_light">Число нейронов в мозге человека</p>
             </div>
-
           </li>
           <li class="table__cell_theme_light">
             <div>
               <h3 class="table__heading_light">2.1 миллиарда</h3>
-              <p class="table__cell_text_light">Число нуждающихся в повышении квалификации<br>Всемирный Банк, 2017</br></p>
+              <p class="table__cell_text_light">Число нуждающихся в повышении квалификации</p>
+              <p class="table__cell_text_light"> Всемирный Банк, 2017</p>
             </div>
-
           </li>
           <li class="table__cell_theme_light">
             <div>
               <h3 class="table__heading_light">1000 терабайт</h3>
               <p class="table__cell_text_light">Объём памяти человека</p>
             </div>
-
           </li>
           <li class="table__cell_theme_light">
             <div>
@@ -83,52 +74,42 @@
               <p class="table__cell_text_light">Число ответственных за обучение нервных синапсов у взрослого человека
               </p>
             </div>
-
           </li>
           <li class="table__cell_theme_light">
             <div>
               <h3 class="table__heading_light">420 миллионов</h3>
               <p class="table__cell_text_light">Число взрослых людей моложе 25 лет,не имеющих образования для
-                трудоустройства.<br></br><br>Всемирный Банк, 2017</br></p>
+                трудоустройства.</p>
+              <p class="table__cell_text_light"> Всемирный Банк, 2017</p>
             </div>
-
           </li>
           <li class="table__cell_theme_light">
             <div>
               <h3 class="table__heading_light">17–20 лет</h3>
               <p class="table__cell_text_light">Пик обучаемости</p>
             </div>
-
           </li>
           <li class="table__cell_theme_light">
             <div>
               <h3 class="table__heading_light">1885 год</h3>
               <p class="table__cell_text_light">Открытие кривой забывания</p>
             </div>
-
           </li>
           <li class="table__cell_theme_light">
             <div>
               <h3 class="table__heading_light">1889 год</h3>
               <p class="table__cell_text_light">Открытие условного рефлекса</p>
             </div>
-
           </li>
-
-
           <div>
-
           </div>
-
         </ul>
       </section>
 
       <section class="feynman">
-        <!-- Надпись -->
+        <!-- Треугольник -->
         <h2 class="feynman__title">Метод Фейнмана</h2>
-        <!-- Подзаголовок -->
         <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
-        <!-- Основная картинка -->
         <img class="feynman__main-illustration"
           src="C:\Users\Antonkatuwka\Desktop\Яндекс.Практикум\практика\second-project\how-to-learn\images\feynman.png"
           alt="Фейнман">
@@ -136,9 +117,10 @@
       </section>
 
       <section class="kaufman">
+        <!-- тёмная таблица -->
         <h2 class="kaufman-title_dark">Принципы обучения</h2>
         <h3 class="kaufman-subtitle_dark">от Джоша Кауфмана</h3>
-        <img class="kaufman__main-illustration_dark"
+        <img class="kaufman__triangle"
           src="C:\Users\Antonkatuwka\Desktop\Яндекс.Практикум\практика\second-project\how-to-learn\images\kaufman-triangle.svg"
           alt="треугольник">
         <ul class="table table_dark">
@@ -147,89 +129,77 @@
               <h3 class="table__heading_dark">1</h3>
               <p class="table__cell_text_dark">Выберите привлекательный проект.</p>
             </div>
-
           </li>
           <li class="table__cell_theme_dark">
             <div>
               <h3 class="table__heading_dark">2</h3>
               <p class="table__cell_text_dark">Сосредоточьтесь на каком-то одном навыке.</p>
             </div>
-
           </li>
           <li class="table__cell_theme_dark">
             <div>
               <h3 class="table__heading_dark">3</h3>
               <p class="table__cell_text_dark">Определите целевой уровень мастерства.</p>
             </div>
-
           </li>
           <li class="table__cell_theme_dark">
             <div>
               <h3 class="table__heading_dark">4</h3>
               <p class="table__cell_text_dark">Разбейте навык на элементы.</p>
             </div>
-
           </li>
           <li class="table__cell_theme_dark">
             <div>
               <h3 class="table__heading_dark">5</h3>
               <p class="table__cell_text_dark">Приготовьте всё необходимое для занятий.</p>
             </div>
-
           </li>
           <li class="table__cell_theme_dark">
             <div>
               <h3 class="table__heading_dark">6</h3>
               <p class="table__cell_text_dark">Устраните препятствия для занятий.</p>
             </div>
-
           </li>
           <li class="table__cell_theme_dark">
             <div>
               <h3 class="table__heading_dark">7</h3>
               <p class="table__cell_text_dark">Выделите специальное время для занятий.</p>
             </div>
-
           </li>
           <li class="table__cell_theme_dark">
             <div>
               <h3 class="table__heading_dark">8</h3>
               <p class="table__cell_text_dark">Создайте быстрые петли обратной связи.</p>
             </div>
-
           </li>
-
           </li>
           <li class="table__cell_theme_dark">
             <div>
               <h3 class="table__heading_dark">9</h3>
               <p class="table__cell_text_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
             </div>
-
           </li>
           <li class="table__cell_theme_dark">
             <div>
               <h3 class="table__heading_dark">10</h3>
               <p class="table__cell_text_dark">Уделяйте внимание количеству и скорости.</p>
             </div>
-
           </li>
-
           <div>
-
           </div>
-
         </ul>
       </section>
     </main>
+
+
     <footer class="footer">
+      <!-- Подвал -->
       <div class="footer__columns">
+        <p class="footer__autor">&copy 2021. Преснякова Екатерина </p>
         <div class="footer__columns_content_copyright">
           <img class="logo_place_footer"
             src="C:\Users\Antonkatuwka\Desktop\Яндекс.Практикум\практика\second-project\how-to-learn\images\logo_place_footer.svg"
             alt="Логотип">
-          <p class="footer__autor">&copy 2021. Преснякова Екатерина </p>
-
         </div>
         <div class="footer__columns_content_info">
           <h3 class="footer__column-heading">О Практикуме</h3>
@@ -238,32 +208,26 @@
             <a href="" class="footer__column-links">Концепция</a>
             <a href="" class="footer__column-links">Наставники</a>
           </div>
-          <div class="footer__columns_content_social">
-            <h3 class="footer__column-heading">Соцсети</h3>
-            <div class="footer__columns_content_social">
-              <!--<div class="footer__column-link">-->
-                <img class="footer__social-icon"
-                  src="C:\Users\Antonkatuwka\Desktop\Яндекс.Практикум\практика\second-project\how-to-learn\images\facebook_color_white.svg"
-                  alt="Facebook">
-                <a href="" class="footer__column-links">Facebook</a>
-
-              <!--/div-->
-              <div class="footer__column-link">
-                <img class="footer__social-icon"
-                  src="C:\Users\Antonkatuwka\Desktop\Яндекс.Практикум\практика\second-project\how-to-learn\images\vk_color_white.svg"
-                  alt="ВКонтакте">
-                <a href="" class="footer__column-links">ВКонтакте</a>
-
-              </div>
-              <div class="footer__column-link">
-                <img class="footer__social-icon"
-                  src="C:\Users\Antonkatuwka\Desktop\Яндекс.Практикум\практика\second-project\how-to-learn\images\instagram_color_white.svg"
-                  alt="Instagram">
-                <a href="" class="footer__column-links">Instagram</a>
-
-              </div>
-            </div>
-
+        </div>
+        <div class="footer__columns_content_social">
+          <h3 class="footer__column-heading">Соцсети</h3>
+          <div class="footer__column-link">
+            <img class="footer__social-icon"
+              src="C:\Users\Antonkatuwka\Desktop\Яндекс.Практикум\практика\second-project\how-to-learn\images\facebook_color_white.svg"
+              alt="Facebook">
+            <a href="" class="footer__column-link">Facebook</a>
+          </div>
+          <div class="footer__column-link">
+            <img class="footer__social-icon"
+              src="C:\Users\Antonkatuwka\Desktop\Яндекс.Практикум\практика\second-project\how-to-learn\images\vk_color_white.svg"
+              alt="ВКонтакте">
+            <a href="" class="footer__column-link">ВКонтакте</a>
+          </div>
+          <div class="footer__column-link">
+            <img class="footer__social-icon"
+              src="C:\Users\Antonkatuwka\Desktop\Яндекс.Практикум\практика\second-project\how-to-learn\images\instagram_color_white.svg"
+              alt="Instagram">
+            <a href="" class="footer__column-link">Instagram</a>
           </div>
         </div>
       </div>
