--- a/index.html
+++ b/index.html
@@ -13,15 +13,11 @@
   <div class="page">
     <header class="header">
       <!--Header-->
-      <img
-        src="C:/Users/Antonkatuwka/Desktop/%D0%AF%D0%BD%D0%B4%D0%B5%D0%BA%D1%81.%D0%9F%D1%80%D0%B0%D0%BA%D1%82%D0%B8%D0%BA%D1%83%D0%BC/%D0%BF%D1%80%D0%B0%D0%BA%D1%82%D0%B8%D0%BA%D0%B0/second-project/how-to-learn/images/logo_place_header.svg"
-        alt="Logo" class="logo_place_header">
+      <img src="images/logo_place_header.svg" alt="Logo" class="logo_place_header">
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей
-        жизни? <a href="header__subtitle_link">Узнать &#8594</a></p>
-      <img class="header__main-illustration"
-        src="C:/Users/Antonkatuwka/Desktop/%D0%AF%D0%BD%D0%B4%D0%B5%D0%BA%D1%81.%D0%9F%D1%80%D0%B0%D0%BA%D1%82%D0%B8%D0%BA%D1%83%D0%BC/%D0%BF%D1%80%D0%B0%D0%BA%D1%82%D0%B8%D0%BA%D0%B0/second-project/how-to-learn/images/header-image.png"
-        alt="Опять двойка">
+        жизни? <a href="header__subtitle_link">Узнать &#8594;</a></p>
+      <img class="header__main-illustration" src="images/header-image.png" alt="Опять двойка">
       <div class="header__square-pic"></div>
     </header>
 
@@ -101,8 +97,6 @@
               <p class="table__cell_text_light">Открытие условного рефлекса</p>
             </div>
           </li>
-          <div>
-          </div>
         </ul>
       </section>
 
@@ -110,19 +104,15 @@
         <!-- Треугольник -->
         <h2 class="feynman__title">Метод Фейнмана</h2>
         <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
-        <img class="feynman__main-illustration"
-          src="C:\Users\Antonkatuwka\Desktop\Яндекс.Практикум\практика\second-project\how-to-learn\images\feynman.png"
-          alt="Фейнман">
-        <h3 class="feynman__link">Подробнее &#8594</h3>
+        <img class="feynman__main-illustration" src="images/feynman.png" alt="Фейнман">
+        <h3 class="feynman__link">Подробнее &#8594;</h3>
       </section>
 
       <section class="kaufman">
         <!-- тёмная таблица -->
         <h2 class="kaufman-title_dark">Принципы обучения</h2>
         <h3 class="kaufman-subtitle_dark">от Джоша Кауфмана</h3>
-        <img class="kaufman__triangle"
-          src="C:\Users\Antonkatuwka\Desktop\Яндекс.Практикум\практика\second-project\how-to-learn\images\kaufman-triangle.svg"
-          alt="треугольник">
+        <img class="kaufman__triangle" src="images/kaufman-triangle.svg" alt="треугольник">
         <ul class="table table_dark">
           <li class="table__cell_theme_dark">
             <div>
@@ -172,7 +162,6 @@
               <p class="table__cell_text_dark">Создайте быстрые петли обратной связи.</p>
             </div>
           </li>
-          </li>
           <li class="table__cell_theme_dark">
             <div>
               <h3 class="table__heading_dark">9</h3>
@@ -185,8 +174,6 @@
               <p class="table__cell_text_dark">Уделяйте внимание количеству и скорости.</p>
             </div>
           </li>
-          <div>
-          </div>
         </ul>
       </section>
     </main>
@@ -195,11 +182,9 @@
     <footer class="footer">
       <!-- Подвал -->
       <div class="footer__columns">
-        <p class="footer__autor">&copy 2021. Преснякова Екатерина </p>
+        <p class="footer__autor">&copy; 2021. Преснякова Екатерина </p>
         <div class="footer__columns_content_copyright">
-          <img class="logo_place_footer"
-            src="C:\Users\Antonkatuwka\Desktop\Яндекс.Практикум\практика\second-project\how-to-learn\images\logo_place_footer.svg"
-            alt="Логотип">
+          <img class="logo_place_footer" src="images/logo_place_footer.svg" alt="Логотип">
         </div>
         <div class="footer__columns_content_info">
           <h3 class="footer__column-heading">О Практикуме</h3>
@@ -212,21 +197,15 @@
         <div class="footer__columns_content_social">
           <h3 class="footer__column-heading">Соцсети</h3>
           <div class="footer__column-link">
-            <img class="footer__social-icon"
-              src="C:\Users\Antonkatuwka\Desktop\Яндекс.Практикум\практика\second-project\how-to-learn\images\facebook_color_white.svg"
-              alt="Facebook">
+            <img class="footer__social-icon" src="images/facebook_color_white.svg" alt="Facebook">
             <a href="" class="footer__column-link">Facebook</a>
           </div>
           <div class="footer__column-link">
-            <img class="footer__social-icon"
-              src="C:\Users\Antonkatuwka\Desktop\Яндекс.Практикум\практика\second-project\how-to-learn\images\vk_color_white.svg"
-              alt="ВКонтакте">
+            <img class="footer__social-icon" src="images/vk_color_white.svg" alt="ВКонтакте">
             <a href="" class="footer__column-link">ВКонтакте</a>
           </div>
           <div class="footer__column-link">
-            <img class="footer__social-icon"
-              src="C:\Users\Antonkatuwka\Desktop\Яндекс.Практикум\практика\second-project\how-to-learn\images\instagram_color_white.svg"
-              alt="Instagram">
+            <img class="footer__social-icon" src="images/instagram_color_white.svg" alt="Instagram">
             <a href="" class="footer__column-link">Instagram</a>
           </div>
         </div>
