--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="ru">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles/normalize.css">
   <link rel="stylesheet" href="styles/style.css">
   <title>Научиться учиться</title>
+
 </head>
 
 <body>
   <div class="page">
     <header class="header">
       <!--Header-->
-      <img src="images/logo_place_header.svg" alt="Logo" class="logo_place_header">
+      <img src="images/logo_place_header.svg" alt="Логотип" class="logo_place_header">
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей
         жизни? <a href="header__subtitle_link">Узнать &#8594;</a></p>
@@ -197,7 +197,7 @@
         <div class="footer__columns_content_social">
           <h3 class="footer__column-heading">Соцсети</h3>
           <div class="footer__column-link">
-            <img class="footer__social-icon" src="images/facebook_color_white.svg" alt="Facebook">
+            <img class="footer__social-icon" src="images/facebook_color_white.svg" lang="en" alt="Facebook">
             <a href="" class="footer__column-link">Facebook</a>
           </div>
           <div class="footer__column-link">
@@ -205,7 +205,7 @@
             <a href="" class="footer__column-link">ВКонтакте</a>
           </div>
           <div class="footer__column-link">
-            <img class="footer__social-icon" src="images/instagram_color_white.svg" alt="Instagram">
+            <img class="footer__social-icon" src="images/instagram_color_white.svg" lang="en" alt="Instagram">
             <a href="" class="footer__column-link">Instagram</a>
           </div>
         </div>
