--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles/normalize.css">
   <link rel="stylesheet" href="styles/style.css">
   <title>Научиться учиться</title>
-
 </head>
 
 <body>
@@ -16,19 +16,18 @@
       <img src="images/logo_place_header.svg" alt="Логотип" class="logo_place_header">
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей
-        жизни? <a href="header__subtitle_link">Узнать &#8594;</a></p>
+        жизни? <a class="header__subtitle-link">Узнать &#8594;</a></p>
       <img class="header__main-illustration" src="images/header-image.png" alt="Опять двойка">
       <div class="header__square-pic"></div>
     </header>
-
-
     <main class="content">
       <!-- 2 колонки -->
       <section class="description">
         <div class="description__two-columns">
           <h2 class="description__two-columns_brief">Главные проблемы в обучении</h2>
           <div class="description__two-columns_main-text">
-            <p class="description_main-text_paragraph">Ни в школе, ни в институте нас не учат тому, как правильно
+            <p class="description__two-columns_main-text_paragraph">Ни в школе, ни в институте нас не учат тому, как
+              правильно
               изучать материал. Мы готовимся к экзаменам и
               учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не
               даёт нам реального знания. Зубрёжка быстро выветривается и не приносит пользы. </p>
@@ -39,67 +38,67 @@
           </div>
         </div>
       </section>
-
       <section class="digits">
         <!-- светлая таблица -->
         <h2 class="digits-title">Цифры и факты</h2>
         <h3 class="digits-subtitle">Про учёбу и мозг</h3>
-        <ul class="table table_light">
-          <li class="table__cell_theme_light">
+        <ul class="table table-light">
+          <li class="table__cell table__cell_theme_light">
             <div>
-              <h3 class="table__heading_light">86 миллиардов</h3>
-              <p class="table__cell_text_light">Число нейронов в мозге человека</p>
+              <h3 class="table__heading table__heading_light">86 миллиардов</h3>
+              <p class="table__cell_text table__cell_text_light">Число нейронов в мозге человека</p>
             </div>
           </li>
-          <li class="table__cell_theme_light">
+          <li class="table__cell table__cell_theme_light">
             <div>
-              <h3 class="table__heading_light">2.1 миллиарда</h3>
-              <p class="table__cell_text_light">Число нуждающихся в повышении квалификации</p>
-              <p class="table__cell_text_light"> Всемирный Банк, 2017</p>
+              <h3 class="table__heading table__heading_light">2.1 миллиарда</h3>
+              <p class="table__cell_text table__cell_text_light">Число нуждающихся в повышении квалификации</p>
+              <p class="table__cell_text table__cell_text_light"> Всемирный Банк, 2017</p>
             </div>
           </li>
-          <li class="table__cell_theme_light">
+          <li class="table__cell table__cell_theme_light">
             <div>
-              <h3 class="table__heading_light">1000 терабайт</h3>
-              <p class="table__cell_text_light">Объём памяти человека</p>
+              <h3 class="table__heading table__heading_light">1000 терабайт</h3>
+              <p class="table__cell_text table__cell_text_light">Объём памяти человека</p>
             </div>
           </li>
-          <li class="table__cell_theme_light">
+          <li class="table__cell table__cell_theme_light">
             <div>
-              <h3 class="table__heading_light">500 триллионов</h3>
-              <p class="table__cell_text_light">Число ответственных за обучение нервных синапсов у взрослого человека
+              <h3 class="table__heading table__heading_light">500 триллионов</h3>
+              <p class="table__cell_text table__cell_text_light">Число ответственных за обучение нервных синапсов у
+                взрослого человека
               </p>
             </div>
           </li>
-          <li class="table__cell_theme_light">
+          <li class="table__cell table__cell_theme_light">
             <div>
-              <h3 class="table__heading_light">420 миллионов</h3>
-              <p class="table__cell_text_light">Число взрослых людей моложе 25 лет,не имеющих образования для
+              <h3 class="table__heading table__heading_light">420 миллионов</h3>
+              <p class="table__cell_text table__cell_text_light">Число взрослых людей моложе 25 лет,не имеющих
+                образования для
                 трудоустройства.</p>
-              <p class="table__cell_text_light"> Всемирный Банк, 2017</p>
+              <p class="table__cell_text table__cell_text_light"> Всемирный Банк, 2017</p>
             </div>
           </li>
-          <li class="table__cell_theme_light">
+          <li class="table__cell table__cell_theme_light">
             <div>
-              <h3 class="table__heading_light">17–20 лет</h3>
-              <p class="table__cell_text_light">Пик обучаемости</p>
+              <h3 class="table__heading table__heading_light">17–20 лет</h3>
+              <p class="table__cell_text table__cell_text_light">Пик обучаемости</p>
             </div>
           </li>
-          <li class="table__cell_theme_light">
+          <li class="table__cell table__cell_theme_light">
             <div>
-              <h3 class="table__heading_light">1885 год</h3>
-              <p class="table__cell_text_light">Открытие кривой забывания</p>
+              <h3 class="table__heading table__heading_light">1885 год</h3>
+              <p class="table__cell_text table__cell_text_light">Открытие кривой забывания</p>
             </div>
           </li>
-          <li class="table__cell_theme_light">
+          <li class="table__cell table__cell_theme_light">
             <div>
-              <h3 class="table__heading_light">1889 год</h3>
-              <p class="table__cell_text_light">Открытие условного рефлекса</p>
+              <h3 class="table__heading table__heading_light">1889 год</h3>
+              <p class="table__cell_text table__cell_text_light">Открытие условного рефлекса</p>
             </div>
           </li>
         </ul>
       </section>
-
       <section class="feynman">
         <!-- Треугольник -->
         <h2 class="feynman__title">Метод Фейнмана</h2>
@@ -107,106 +106,99 @@
         <img class="feynman__main-illustration" src="images/feynman.png" alt="Фейнман">
         <h3 class="feynman__link">Подробнее &#8594;</h3>
       </section>
-
       <section class="kaufman">
         <!-- тёмная таблица -->
-        <h2 class="kaufman-title_dark">Принципы обучения</h2>
-        <h3 class="kaufman-subtitle_dark">от Джоша Кауфмана</h3>
+        <h2 class="kaufman-title">Принципы обучения</h2>
+        <h3 class="kaufman-subtitle">от Джоша Кауфмана</h3>
         <img class="kaufman__triangle" src="images/kaufman-triangle.svg" alt="треугольник">
-        <ul class="table table_dark">
-          <li class="table__cell_theme_dark">
+        <ul class="table table_theme-dark">
+          <li class="table__cell table__cell_theme-dark">
             <div>
-              <h3 class="table__heading_dark">1</h3>
-              <p class="table__cell_text_dark">Выберите привлекательный проект.</p>
+              <h3 class="table__heading table__heading_theme-dark">1</h3>
+              <p class="table__cell_text table__cell_text_theme-dark">Выберите привлекательный проект.</p>
             </div>
           </li>
-          <li class="table__cell_theme_dark">
+          <li class="table__cell table__cell_theme-dark">
             <div>
-              <h3 class="table__heading_dark">2</h3>
-              <p class="table__cell_text_dark">Сосредоточьтесь на каком-то одном навыке.</p>
+              <h3 class="table__heading table__heading_theme-dark">2</h3>
+              <p class="table__cell_text table__cell_text_theme-dark">Сосредоточьтесь на каком-то одном навыке.</p>
             </div>
           </li>
-          <li class="table__cell_theme_dark">
+          <li class="table__cell table__cell_theme-dark">
             <div>
-              <h3 class="table__heading_dark">3</h3>
-              <p class="table__cell_text_dark">Определите целевой уровень мастерства.</p>
+              <h3 class="table__heading table__heading_theme-dark">3</h3>
+              <p class="table__cell_text table__cell_text_theme-dark">Определите целевой уровень мастерства.</p>
             </div>
           </li>
-          <li class="table__cell_theme_dark">
+          <li class="table__cell table__cell_theme-dark">
             <div>
-              <h3 class="table__heading_dark">4</h3>
-              <p class="table__cell_text_dark">Разбейте навык на элементы.</p>
+              <h3 class="table__heading table__heading_theme-dark">4</h3>
+              <p class="table__cell_text table__cell_text_theme-dark">Разбейте навык на элементы.</p>
             </div>
           </li>
-          <li class="table__cell_theme_dark">
+          <li class="table__cell table__cell_theme-dark">
             <div>
-              <h3 class="table__heading_dark">5</h3>
-              <p class="table__cell_text_dark">Приготовьте всё необходимое для занятий.</p>
+              <h3 class="table__heading table__heading_theme-dark">5</h3>
+              <p class="table__cell_text table__cell_text_theme-dark">Приготовьте всё необходимое для занятий.</p>
             </div>
           </li>
-          <li class="table__cell_theme_dark">
+          <li class="table__cell table__cell_theme-dark">
             <div>
-              <h3 class="table__heading_dark">6</h3>
-              <p class="table__cell_text_dark">Устраните препятствия для занятий.</p>
+              <h3 class="table__heading table__heading_theme-dark">6</h3>
+              <p class="table__cell_text table__cell_text_theme-dark">Устраните препятствия для занятий.</p>
             </div>
           </li>
-          <li class="table__cell_theme_dark">
+          <li class="table__cell table__cell_theme-dark">
             <div>
-              <h3 class="table__heading_dark">7</h3>
-              <p class="table__cell_text_dark">Выделите специальное время для занятий.</p>
+              <h3 class="table__heading table__heading_theme-dark">7</h3>
+              <p class="table__cell_text table__cell_text_theme-dark">Выделите специальное время для занятий.</p>
             </div>
           </li>
-          <li class="table__cell_theme_dark">
+          <li class="table__cell table__cell_theme-dark">
             <div>
-              <h3 class="table__heading_dark">8</h3>
-              <p class="table__cell_text_dark">Создайте быстрые петли обратной связи.</p>
+              <h3 class="table__heading table__heading_theme-dark">8</h3>
+              <p class="table__cell_text table__cell_text_theme-dark">Создайте быстрые петли обратной связи.</p>
             </div>
           </li>
-          <li class="table__cell_theme_dark">
+          <li class="table__cell table__cell_theme-dark">
             <div>
-              <h3 class="table__heading_dark">9</h3>
-              <p class="table__cell_text_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+              <h3 class="table__heading table__heading_theme-dark">9</h3>
+              <p class="table__cell_text table__cell_text_theme-dark">Занимайтесь по расписанию, короткими интенсивными
+                интервалами.</p>
             </div>
           </li>
-          <li class="table__cell_theme_dark">
+          <li class="table__cell table__cell_theme-dark">
             <div>
-              <h3 class="table__heading_dark">10</h3>
-              <p class="table__cell_text_dark">Уделяйте внимание количеству и скорости.</p>
+              <h3 class="table__heading table__heading_theme-dark">10</h3>
+              <p class="table__cell_text table__cell_text_theme-dark">Уделяйте внимание количеству и скорости.</p>
             </div>
           </li>
         </ul>
       </section>
     </main>
-
-
     <footer class="footer">
-      <!-- Подвал -->
+      <!--Подвал-->
       <div class="footer__columns">
-        <p class="footer__autor">&copy; 2021. Преснякова Екатерина </p>
-        <div class="footer__columns_content_copyright">
-          <img class="logo_place_footer" src="images/logo_place_footer.svg" alt="Логотип">
+        <div class="footer__columns_content-copyright">
+          <img class="logo_place_footer" alt="ЛОготип" src="./images/logo_place_footer.svg">
+          <p class="footer__author">&copy; 2021. Екатерина Преснякова.</p>
         </div>
         <div class="footer__columns_content_info">
           <h3 class="footer__column-heading">О Практикуме</h3>
-          <div class="footer__column-link">
-            <a href="" class="footer__column-links">Главная</a>
-            <a href="" class="footer__column-links">Концепция</a>
-            <a href="" class="footer__column-links">Наставники</a>
+          <div class="footer__column-links footer__column-link">
+            <a>Главная</a>
+            <a>Концепция</a>
+            <a>Наставники</a>
           </div>
         </div>
         <div class="footer__columns_content_social">
           <h3 class="footer__column-heading">Соцсети</h3>
-          <div class="footer__column-link">
-            <img class="footer__social-icon" src="images/facebook_color_white.svg" lang="en" alt="Facebook">
-            <a href="" class="footer__column-link">Facebook</a>
-          </div>
-          <div class="footer__column-link">
-            <img class="footer__social-icon" src="images/vk_color_white.svg" alt="ВКонтакте">
-            <a href="" class="footer__column-link">ВКонтакте</a>
-          </div>
-          <div class="footer__column-link">
-            <img class="footer__social-icon" src="images/instagram_color_white.svg" lang="en" alt="Instagram">
-            <a href="" class="footer__column-link">Instagram</a>
+          <div class="footer__column-links">
+            <a><img src="./images/facebook_color_white.svg" class="footer__social-icon" lang="en"
+                alt="Facebook">Facebook</a>
+            <a><img src="./images/vk_color_white.svg" class="footer__social-icon" alt="ВКонтакте">ВКонтакте</a>
+            <a><img src="./images/instagram_color_white.svg" class="footer__social-icon" lang="en"
+                alt="Instagram">Instagram</a>
           </div>
         </div>
       </div>
