--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="page">
     <header class="header">
       <!--Header-->
-      <img src="images/logo_place_header.svg" alt="Логотип" class="logo_place_header">
+      <img src="images/logo_place_header.svg" alt="Логотип" class="logo logo_place_header">
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей
         жизни? <a class="header__subtitle-link">Узнать &#8594;</a></p>
@@ -180,7 +180,7 @@
       <!--Подвал-->
       <div class="footer__columns">
         <div class="footer__columns_content-copyright">
-          <img class="logo_place_footer" alt="ЛОготип" src="./images/logo_place_footer.svg">
+          <img class="logo logo_place_footer" alt="ЛОготип" src="./images/logo_place_footer.svg">
           <p class="footer__author">&copy; 2021. Екатерина Преснякова.</p>
         </div>
         <div class="footer__columns_content_info">
