--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
       </section>
       <section class="kaufman">
         <!-- тёмная таблица -->
-        <h2 class="section-title_theme_dark">Принципы обучения</h2>
-        <h3 class="section-subtitle_theme_dark">от Джоша Кауфмана</h3>
+        <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
+        <h3 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h3>
         <div class="kaufman__triangle"></div>
         <ul class="table table_theme_dark">
           <li class="table__cell table__cell_theme_dark">
@@ -176,11 +176,11 @@
     <footer class="footer">
       <!--Подвал-->
       <div class="footer__columns">
-        <div class="footer__column_content_copyright">
+        <div class="footer__column footer__column_content_copyright">
           <img class="logo logo_place_footer" alt="Логотип" src="./images/logo_place_footer.svg">
           <p class="footer__author">&copy; 2021. Екатерина Преснякова.</p>
         </div>
-        <nav class="footer__column_content_info">
+        <nav class="footer__column footer__column_content_info">
           <h3 class="footer__column-heading">О Практикуме</h3>
           <ul class="footer__column-links">
             <li>
@@ -194,7 +194,7 @@
             </li>
           </ul>
         </nav>
-        <nav class="footer__column_content_social">
+        <nav class="footer__column footer__column_content_social">
           <h3 class="footer__column-heading">Соцсети</h3>
           <ul class="footer__column-links">
             <li>
