--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей
         жизни? <a href="" class="header__link">Узнать &#8594;</a></p>
-      <img class="header__main-illustration" src="images/header-image.png" alt="Опять двойка">
+      <img class="header__main-illustration rotation" src="images/header-image.png" alt="Опять двойка">
       <div class="header__square-pic"></div>
     </header>
     <main class="content">
@@ -176,7 +176,7 @@
         <!-- тёмная таблица -->
         <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
         <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
-        <div class="kaufman__triangle"></div>
+        <div class="kaufman__triangle rotation"></div>
         <ul class="table table_theme_dark">
           <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">1</h3>
