--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles/normalize.css">
+  <link rel="stylesheet" href="vendor/normalize.css">
   <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="pages/index.css">
   <title>Научиться учиться</title>
 </head>
 
@@ -13,12 +14,12 @@
   <div class="page">
     <header class="header">
       <!--Header-->
-      <img src="images\logo\logo_place_header.svg" alt="Логотип" class="logo logo_place_header">
+      <img src="images/logo/logo_place_header.svg" alt="Логотип" class="logo logo_place_header">
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей
         жизни? <a href="" class="header__link">Узнать &#8594;</a></p>
-      <img class="header__main-illustration rotation" src="images/header-image.png" alt="Опять двойка">
-      <div class="header__square-pic"></div>
+      <img class="header__main-illustration" src="images/header-image.png" alt="Опять двойка">
+      <div class="header__square-pic rotation"></div>
     </header>
     <main class="content">
 
@@ -46,29 +47,29 @@
         <p class="section-subtitle">Пять практик от Барбары Оакли</p>
         <ul class="cards">
           <li class="cards__item">
-            <img class="cards__image" src="images\cards-attention.png" alt="Виды внимания">
+            <img class="cards__image" src="images/cards-attention.png" alt="Виды внимания">
             <h3 class="cards__title">Два вида внимания</h3>
             <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное
               мышление.</p>
           </li>
           <li class="cards__item">
-            <img class="cards__image" src="images\cards-recall.png" alt="Вспомнить">
+            <img class="cards__image" src="images/cards-recall.png" alt="Вспомнить">
             <h3 class="cards__title">Recall</h3>
             <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
           </li>
           <li class="cards__item">
-            <img class="cards__image" src="images\cards-interliving.png" alt="Интерливинг">
+            <img class="cards__image" src="images/cards-interliving.png" alt="Интерливинг">
             <h3 class="cards__title">Интерливинг</h3>
             <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
           </li>
           <li class="cards__item">
-            <img class="cards__image" src="images\cards-question.png" alt="Вопросы">
+            <img class="cards__image" src="images/cards-question.png" alt="Вопросы">
             <h3 class="cards__title">Вопросы</h3>
             <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно
               волнует.</p>
           </li>
           <li class="cards__item">
-            <img class="cards__image" src="images\cards-competence.png" alt="Иллюзия компетентности">
+            <img class="cards__image" src="images/cards-competence.png" alt="Иллюзия компетентности">
             <h3 class="cards__title">Иллюзия компетентности</h3>
             <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы
               владеете новой темой.</p>
@@ -77,7 +78,7 @@
       </section>
       <section class="video">
         <!--video-->
-        <h2 class="section-title">Видео нa TED</h2>
+        <h2 class="section-title section__title_place_video">Видео нa TED</h2>
         <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
         <div class="video__iframes">
           <iframe class="video__iframe" width="560" height="315" src="https://www.youtube.com/embed/5MgBikgcWnY"
@@ -167,7 +168,7 @@
           <p class="khan__quote-author">Джордж Лукас</p>
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
-            <img class="khan__book-pic" src="images\khan-book.jpg" alt="Обложка книги">
+            <img class="khan__book-pic" src="images/khan-book.jpg" alt="Обложка книги">
             <a href="" class="khan__buy-link">Купить книгу &#8594;</a>
           </div>
         </div>
@@ -225,10 +226,10 @@
         <h2 class="section-title">Полезные ресурсы</h2>
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
         <div class="resources__logo-zone">
-          <img class="resources__logo" src="images\logo\resources-arzamas.svg" alt="Арзамас">
-          <img class="resources__logo" src="images\logo\resources-n1.svg" alt="Н1">
-          <img class="resources__logo" src="images\logo\resources-strelka.svg" alt="Стрелка">
-          <img class="resources__logo" src="images\logo\resources-polka.svg" alt="Полка">
+          <img class="resources__logo" src="images/logo/resources-arzamas.svg" alt="Арзамас">
+          <img class="resources__logo" src="images/logo/resources-n1.svg" alt="Н1">
+          <img class="resources__logo" src="images/logo/resources-strelka.svg" alt="Стрелка">
+          <img class="resources__logo" src="images/logo/resources-polka.svg" alt="Полка">
         </div>
       </section>
     </main>
@@ -236,7 +237,7 @@
       <!--Подвал-->
       <div class="footer__columns">
         <div class="footer__column footer__column_content_copyright">
-          <img class="logo logo_place_footer" alt="Логотип" src="images\logo\logo_place_footer.svg">
+          <img class="logo logo_place_footer" alt="Логотип" src="images/logo/logo_place_footer.svg">
           <p class="footer__author">&copy; 2021. Екатерина Преснякова.</p>
         </div>
         <nav class="footer__column footer__column_content_info">
@@ -258,15 +259,15 @@
           <ul class="footer__column-links">
             <li>
               <a href="" class="footer__column-link"><img class="footer__social-icon"
-                  src="images\icon\facebook_color_white.svg" lang="en" alt="Facebook">Facebook</a>
+                  src="images/icon/facebook_color_white.svg" lang="en" alt="Facebook">Facebook</a>
             </li>
             <li>
-              <a href="" class="footer__column-link"><img class="footer__social-icon" src="images\icon\vk_color_white.svg"
+              <a href="" class="footer__column-link"><img class="footer__social-icon" src="images/icon/vk_color_white.svg"
                   alt="ВКонтакте">ВКонтакте</a>
             </li>
             <li>
               <a href="" class="footer__column-link"><img class="footer__social-icon"
-                  src="images\icon\instagram_color_white.svg" lang="en" alt="Instagram">Instagram</a>
+                  src="images/icon/instagram_color_white.svg" lang="en" alt="Instagram">Instagram</a>
             </li>
           </ul>
         </nav>
