--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+  <!-- Благодарю за код-ревью, очень ценна похвала - это мотивирует. -->
   <div class="page">
     <header class="header">
       <!--Header-->
